<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_delete_line"
        android:orderInCategory="101"
        android:title="@string/action_delete_line"/>
    <item
        android:id="@+id/action_change_quantity"
        android:orderInCategory="102"
        android:title="@string/action_change_quantity"/>
    
    <item
        android:id="@+id/action_change_price"
        android:orderInCategory="103"
        android:title="@string/action_change_price"/>
    
    <item
        android:id="@+id/action_move_up"
        android:orderInCategory="104"
        android:title="@string/action_move_up"
    	/>    <item
        android:id="@+id/action_move_down"
        android:orderInCategory="105"
        android:title="@string/action_move_down"
        />
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="106"
        android:title="@string/action_clear"
        />
</menu>
