<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:orientation="vertical" >
    
    <ExpandableListView
        android:id="@+id/listViewOrderLines"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@color/greydivider"
        android:dividerHeight="@dimen/twodp">

    </ExpandableListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewTotals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_totals" />

        <TextView
            android:id="@+id/textViewStatistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="statistics" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
	    <Button
	        android:id="@+id/buttonEditLines"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_nomenclature_list" >
	     </Button>
	     
	    <Button
	        android:id="@+id/buttonEditLinesGrid"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_nomenclature_grid"
	        android:visibility="visible" >

	     </Button>
	     
	</LinearLayout>    

</LinearLayout>
