<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textViewTic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:overScrollMode="never"
    android:scrollbars="vertical" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/checkBoxOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_box_orders" />

    <CheckBox
        android:id="@+id/checkBoxRefunds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_box_refunds" />
    
    <CheckBox
        android:id="@+id/checkBoxDistribs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_box_distribs" />
    
    <Spinner
        android:id="@+id/spinnerFilterType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinnerFilterPeriod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:id="@+id/linearLayoutStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/etFirstDate"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:ellipsize="end"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:singleLine="true"
            android:text="01.01.2013" />

        <Button
            android:id="@+id/buttonSelectFirstDate"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="..." />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/etSecondDate"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:ellipsize="end"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:singleLine="true"
            android:text="01.01.2013" />

        <Button
            android:id="@+id/buttonSelectSecondDate"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="..." />
    </LinearLayout>
    
</LinearLayout>
</ScrollView>
